--- a/index.html
+++ b/index.html
@@ -60,12 +60,10 @@
 
         <section id="typography">
             <h1 class="name">
-                <span aria-hidden="true">MANMOHAN</span>
-                MANMOHAN
-                <span aria-hidden="true">MANMOHAN</span>
+                <span aria-hidden="true">GLITCH EFFECT</span>
+                GLITCH EFFECT
+                <span aria-hidden="true">GLITCH EFFECT</span>
             </h1>
-            <p>I'm a front-end developer and general designer with a keen eye for creating engaging UI, bringing products to life.
-            </p>
         </section>
 
         <section class="design">
